ExampleYamlFiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: identitymanager
  name: identitymanager-depl
spec:
  ports:
  - name: "8451"
    port: 8451
    targetPort: 8451
  selector:
    app: identitymanager
  type: ClusterIP
