ExampleYamlFiles/network-policy.yaml
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: metrics-server
  namespace: kube-system
spec:
  selector: k8s-app == "metrics-server"
  types:
    - Ingress
    - Egress
  ingress:
    - action: Allow
      source:
        namespaceSelector: name == "kube-system"
  egress:
    - action: Allow
